--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,7 +108,7 @@ classifiers = [
 # For an analysis of this field vs pip's requirements files see:
 # https://packaging.python.org/discussions/install-requires-vs-requirements/
 dependencies = [
-  "numpy", "torch", 
+  "numpy", "torch", "scipy"
 ]
 
 # List additional groups of dependencies here (e.g. development
