--- a/pyproject.toml
+++ b/pyproject.toml
@@ -159,3 +159,7 @@ dependencies = [
 # https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
 requires = ["setuptools>=43.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+
+[tool.setuptools]
+py-modules = ["epicgan"]
