--- a/pyproject.toml
+++ b/pyproject.toml
@@ -150,7 +150,7 @@ dependencies = [
 # This is configuration specific to the `setuptools` build backend.
 # If you are using a different build backend, you will need to change this.
 [tool.setuptools]
-py-modules = ["epicgan"]
+py-modules = ["epicgan", "training", "evaluate_performance"]
 
 # If there are data files included in your packages that need to be
 # installed, specify them here.
@@ -161,5 +161,3 @@ py-modules = ["epicgan"]
 # https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
 requires = ["setuptools>=43.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
-
-
