--- a/pyproject.toml
+++ b/pyproject.toml
@@ -150,7 +150,7 @@ dependencies = [
 # This is configuration specific to the `setuptools` build backend.
 # If you are using a different build backend, you will need to change this.
 [tool.setuptools]
-py-modules = ["epicgan", "training", "evaluate_performance"]
+py-modules = ["epicgan"]
 
 # If there are data files included in your packages that need to be
 # installed, specify them here.
